<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="provider_authority" translatable="false">ac.mdiq.podcini.provider</string>
    <string name="feed_update_receiver_name">Update subscriptions</string>
    <string name="feeds_label">Podcasts</string>
    <string name="statistics_label">Statistics</string>
    <string name="add_feed_label">Add podcast</string>
    <string name="episodes_label">Episodes</string>
    <string name="home_label">Home</string>
    <string name="queue_label">Queues</string>
    <string name="favorite_episodes_label">Favorites</string>
    <string name="settings_label">Settings</string>
    <string name="downloads_label">Downloads</string>
    <string name="logs_label">Logs</string>
    <string name="subscriptions_log_label">Subscriptions log</string>
    <string name="open_autodownload_settings">Open settings</string>
    <string name="downloads_log_label">Download log</string>
    <string name="subscriptions_label">Subscriptions</string>
    <string name="subscriptions_list_label">Subscriptions list</string>
    <string name="cancel_download_label">Cancel download</string>
    <string name="playback_history_label">History</string>
    <string name="episode_cache_full_title">Episode cache full</string>
    <string name="episode_cache_full_message">The episode cache limit has been reached. You can increase the cache size in the Settings.</string>
    <string name="years_statistics_label">Years</string>
    <string name="notification_pref_fragment">Notifications</string>
    <string name="current_playing_episode">Current</string>
    <string name="current_episode">Current</string>
    <string name="current_podcast">Podcast</string>
    <string name="global">Global</string>
    <string name="podcini_echo" translatable="false">Podcini Echo</string>
    <string name="podcini_echo_year" translatable="false">Podcini Echo %d</string>
    <string name="app_action_not_found">\"%1$s\" not found</string>
    <string name="swipeactions_label">Swipe actions</string>
    <string name="swipeactions_summary">Choose what happens when swiping an episode in a list</string>
    <string name="swipe_right">Swipe right</string>
    <string name="swipe_left">Swipe left</string>
    <string name="enable_swipeactions">Enable swipe actions for this screen</string>
    <string name="change_setting">Change</string>
    <string name="individual_subscription">Subscription</string>
    <string name="subscription">Subscription</string>
    <string name="statistics_include_marked">Include duration of episodes that are just marked as played</string>
    <string name="statistics_speed_not_counted">Notice: Playback speed is never taken into account.</string>
    <string name="statistics_from">From</string>
    <string name="statistics_to">To</string>
    <string name="statistics_today">Today</string>
    <string name="statistics_filter_all_time">All time</string>
    <string name="statistics_filter_past_year">Past year</string>
    <string name="statistics_reset_data">Reset statistics data</string>
    <string name="statistics_reset_data_msg">This will erase the history of duration played for all episodes. Are you sure you want to proceed\?</string>
    <string name="statistics_counting_range">Played between %1$s and %2$s</string>
    <string name="statistics_counting_total">Played in total</string>
    <string name="web_content_not_available">Web content is not available</string>
    <string name="language_not_supported_by_tts">The language is not supported by TTS</string>
    <string name="tts_init_failed">TTS init failed</string>
    <string name="tts_not_available">TTS engine not available</string>
    <string name="episode_has_no_content">Episode has not content</string>
    <string name="unrestricted_background_permission_text">In order to successfully play a list of episodes in the background, Podcini needs Permission for Unrestricted Background Activity. Note on some brands, there are sustomized settings for this, please ensure to set them accordingly.</string>
    <string name="clear_history_label">Clear history</string>
    <string name="refresh_label">Refresh</string>
    <string name="new_synth_label">New synthetic feed</string>
    <string name="toggle_grid_list">Toggle grid list</string>
    <string name="reconcile_label">Reconcile</string>
    <string name="auto_download_label">Include in auto downloads</string>
    <string name="auto_delete_label">Auto delete episode</string>
    <string name="feed_volume_adapdation">Volume adaptation</string>
    <string name="feed_volume_adaptation_summary">Turn volume for episodes of this podcast up or down: %1$s</string>
    <string name="feed_auto_download_policy">Auto download policy</string>
    <string name="put_in_queue_label">Add to queue…</string>
    <string name="rename_feed_label">Rename podcast</string>
    <string name="remove_feed_label">Remove podcast</string>
    <string name="share_label">Share</string>
    <string name="share_notes_label">Share notes</string>
    <string name="load_complete_feed">Refresh complete podcast</string>
    <string name="edit_tags">Edit tags</string>
    <string name="download_label">Download</string>
    <string name="TTS_label">Speak</string>
    <string name="delete_episode_label">Delete episode media</string>
    <string name="javasript_label">JavaScript</string>
    <string name="add_to_queue_label">Add to active queue</string>
    <string name="remove_from_queue_label">Remove from active queue</string>
    <string name="toggle_favorite_label">Toggle favorites</string>
    <string name="visit_website_label">Visit website</string>
    <string name="lock_queue">Lock queue</string>
    <string name="switch_queue">Switch active queue</string>
    <string name="open_queue">Open queue</string>
    <string name="clear_queue_label">Clear queue</string>
    <string name="clear_bin_label">Clear bin</string>
    <string name="sort">Sort</string>
    <string name="rename">Rename</string>
    <string name="add_queue">Add queue</string>
    <string name="show_bin_label">Show bin</string>
    <string name="interruptions">Interruptions</string>
    <string name="playback_control">Playback control</string>
    <string name="reassign_hardware_buttons">Reassign hardware buttons</string>
    <string name="pref_pauseOnDisconnect_sum">Pause playback when headphones or bluetooth are disconnected</string>
    <string name="pref_unpauseOnHeadsetReconnect_sum">Resume playback when the headphones are reconnected</string>
    <string name="pref_unpauseOnBluetoothReconnect_sum">Resume playback when bluetooth reconnects</string>
    <string name="pref_hardware_forward_button_title">Forward button</string>
    <string name="pref_hardware_forward_button_summary">Customize the forward button behavior</string>
    <string name="pref_hardware_previous_button_title">Previous button</string>
    <string name="pref_hardware_previous_button_summary">Customize the previous button behavior</string>
    <string name="pref_followQueue_sum">Jump to next queue item when playback completes</string>
    <string name="pref_mark_played_removes_from_queue_title">Mark played removes from queue</string>
    <string name="pref_mark_played_removes_from_queue_sum">Removes the episodes from all queues when they are mark episodes as played </string>
    <string name="pref_smart_mark_as_played_sum">Mark episodes as played even if less than a certain amount of seconds of playing time is still left</string>
    <string name="pref_smart_mark_as_played_title">Smart mark as played</string>
    <string name="pref_skip_keeps_episodes_sum">Keep episodes when they are skipped</string>
    <string name="pref_skip_keeps_episodes_title">Keep skipped episodes</string>
    <string name="pref_followQueue_title">Continuous playback</string>
    <string name="pref_pauseOnHeadsetDisconnect_title">Headphones or Bluetooth disconnect</string>
    <string name="pref_unpauseOnHeadsetReconnect_title">Headphones reconnect</string>
    <string name="pref_unpauseOnBluetoothReconnect_title">Bluetooth reconnect</string>
    <string name="pref_stream_over_download_title">Prefer streaming</string>
    <string name="pref_stream_over_download_sum">Display stream button instead of download button in lists</string>
    <string name="pref_episode_cache_title">Episode cache</string>
    <string name="pref_episode_cache_summary">Total number of downloaded episodes cached on the device. Automatic download will be suspended if this number is reached.</string>
    <string name="pref_auto_download_counting_played_title">Counting played</string>
    <string name="pref_auto_download_counting_played_summary">Set if downloaded episodes already played count into the episode cache</string>
    <string name="pref_playback_speed_sum">Customize the speeds available for variable speed playback</string>
    <string name="pref_feed_playback_speed_sum">The speed to use when starting audio playback for episodes in this podcast</string>
    <string name="pref_feed_skip">Auto skip</string>
    <string name="pref_feed_skip_sum">Skip introductions and ending credits.</string>
    <string name="associated">Associated</string>
    <string name="pref_feed_associated_queue">Associated queue</string>
    <string name="pref_playback_time_respects_speed_title">Adjust media info to playback speed</string>
    <string name="pref_playback_time_respects_speed_sum">Displayed position and duration are adapted to playback speed</string>
    <string name="pref_fallback_speed">Fallback speed</string>
    <string name="pref_speed_forward">Fast forward speed</string>
    <string name="pref_speed_forward_sum">Customize the speed to speed forward when the skip button is clicked</string>
    <string name="pref_fallback_speed_sum">Customize the speed when the play button is long pressed</string>
    <string name="pref_fast_forward">Fast forward skip time</string>
    <string name="pref_fast_forward_sum">Customize the number of seconds to jump forward when the fast forward button is clicked</string>
    <string name="pref_rewind">Rewind skip time</string>
    <string name="pref_rewind_sum">Customize the number of seconds to jump backwards when the rewind button is clicked</string>
    <string name="pref_playback_video_mode">Video play mode</string>
    <string name="pref_playback_video_mode_sum">Choose how video episode is played by default</string>
    <string name="pref_enqueue_location_title">Enqueue location</string>
    <string name="pref_enqueue_downloaded_title">Enqueue downloaded</string>
    <string name="pref_enqueue_downloaded_summary">Add downloaded episodes to the queue</string>
    <string name="search_label">Search</string>
    <string name="opml_export_label">OPML export</string>
    <string name="pref_pausePlaybackForFocusLoss_sum">Pause playback instead of lowering volume when another app wants to play sounds</string>
    <string name="pref_pausePlaybackForFocusLoss_title">Pause for interruptions</string>
    <string name="authentication_label">Authentication</string>
    <string name="authentication_descr">Change your username and password for this podcast and its episodes.</string>
    <string name="feed_tags_label">Tags</string>
    <string name="feed_tags_summary">Change the tags of this podcast to help organize your subscriptions</string>
    <string name="auto_download_settings_label">Auto download settings</string>
    <string name="episode_inclusive_filters_label">Episode inclusive filter</string>
    <string name="episode_exclusive_filters_label">Episode exclusive filter</string>
    <string name="episode_filters_description">List of terms used to decide if an episode should be included or excluded when auto downloading</string>
    <string name="keep_updated">Keep updated</string>
    <string name="filter">Filter</string>
    <string name="playback_speed">Playback speed</string>
</resources>