<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="feedSettingsScreen">

<!--    <SwitchPreferenceCompat-->
<!--        android:icon="@drawable/ic_refresh"-->
<!--        android:key="keepUpdated"-->
<!--        android:summary="@string/keep_updated_summary"-->
<!--        android:title="@string/keep_updated" />-->

    <Preference
        android:icon="@drawable/ic_key"
        android:key="authentication"
        android:summary="@string/authentication_descr"
        android:title="@string/authentication_label" />

    <Preference
        android:icon="@drawable/ic_tag"
        android:key="tags"
        android:summary="@string/feed_tags_summary"
        android:title="@string/feed_tags_label" />

<!--    <Preference-->
<!--        android:icon="@drawable/ic_playlist_play"-->
<!--        android:key="associatedQueue"-->
<!--        android:summary="@string/pref_feed_associated_queue_sum"-->
<!--        android:title="@string/pref_feed_associated_queue" />-->

    <Preference
        android:icon="@drawable/ic_playback_speed"
        android:key="feedPlaybackSpeed"
        android:summary="@string/pref_feed_playback_speed_sum"
        android:title="@string/playback_speed" />

    <Preference
        android:icon="@drawable/ic_skip_24dp"
        android:key="feedAutoSkip"
        android:summary="@string/pref_feed_skip_sum"
        android:title="@string/pref_feed_skip" />

<!--    <ac.mdiq.podcini.preferences.MaterialListPreference-->
<!--        android:entries="@array/spnAutoDeleteItems"-->
<!--        android:entryValues="@array/spnAutoDeleteValues"-->
<!--        android:icon="@drawable/ic_delete"-->
<!--        android:key="autoDelete"-->
<!--        android:summary="@string/global_default"-->
<!--        android:title="@string/auto_delete_label" />-->

    <ac.mdiq.podcini.preferences.MaterialListPreference
        android:defaultValue="off"
        android:entries="@array/spnVolumeAdaptationItems"
        android:entryValues="@array/spnVolumeAdaptationValues"
        android:icon="@drawable/ic_volume_adaption"
        android:key="volumeReduction"
        android:summary="@string/feed_volume_adaptation_summary"
        android:title="@string/feed_volume_adapdation" />

    <PreferenceCategory
        android:key="autoDownloadCategory"
        android:title="@string/auto_download_settings_label">
        <SwitchPreferenceCompat
            android:key="autoDownload"
            android:title="@string/auto_download_label" />
        <ac.mdiq.podcini.preferences.MaterialListPreference
            android:entries="@array/spnAutoDLPolicyItems"
            android:entryValues="@array/spnAutoDLPolicyValues"
            android:key="feedAutoDownloadPolicy"
            android:title="@string/feed_auto_download_policy" />
        <ac.mdiq.podcini.preferences.MaterialListPreference
            android:defaultValue="3"
            android:entries="@array/feed_episode_cache_size_entries"
            android:key="feedEpisodeCacheSize"
            android:title="@string/pref_episode_cache_title"
            android:summary="@string/pref_episode_cache_summary"
            android:entryValues="@array/feed_episode_cache_size_values"/>
        <SwitchPreferenceCompat
            android:key="countingPlayed"
            android:summary="@string/pref_auto_download_counting_played_summary"
            android:title="@string/pref_auto_download_counting_played_title" />
        <Preference
            android:key="episodeInclusiveFilter"
            android:summary="@string/episode_filters_description"
            android:title="@string/episode_inclusive_filters_label" />
        <Preference
            android:key="episodeExclusiveFilter"
            android:summary="@string/episode_filters_description"
            android:title="@string/episode_exclusive_filters_label" />
    </PreferenceCategory>
</PreferenceScreen>
