<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:custom="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/show_bin"
        android:icon="@drawable/ic_history"
        custom:showAsAction="always"
        android:title="@string/show_bin_label"/>

    <item
        android:id="@+id/associated_feed"
        android:icon="@drawable/baseline_dynamic_feed_24"
        android:title="@string/associated"
        custom:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        custom:showAsAction="always"
        android:title="@string/search_label"/>

    <item
        android:id="@+id/queue_sort"
        android:icon="@drawable/arrows_sort"
        android:title="@string/sort"
        custom:showAsAction="ifRoom" />

    <item
        android:id="@+id/rename_queue"
        android:title="@string/rename" />

    <item
        android:id="@+id/add_queue"
        android:title="@string/add_queue" />

    <item
        android:id="@+id/clear_queue"
        android:title="@string/clear_queue_label"
        custom:showAsAction="collapseActionView"
        android:icon="@drawable/ic_check"/>

    <item
        android:id="@+id/clear_bin"
        android:title="@string/clear_bin_label"
        custom:showAsAction="collapseActionView"
        android:icon="@drawable/ic_check"/>

    <item
        android:id="@+id/refresh_all"
        android:title="@string/refresh_label"
        custom:showAsAction="never" />

    <item
        android:id="@+id/queue_lock"
        android:title="@string/lock_queue"
        android:menuCategory="container"
        android:checkable="true" />
</menu>
