<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/remove_feed"
        android:menuCategory="container"
        android:title="@string/remove_feed_label"
        android:icon="@drawable/ic_delete"/>
    <item
        android:id="@+id/keep_updated"
        android:menuCategory="container"
        android:title="@string/keep_updated"
        android:icon="@drawable/ic_refresh"/>
    <item
        android:id="@+id/autodownload"
        android:menuCategory="container"
        android:title="@string/auto_download_label"
        android:icon="@drawable/ic_download"/>
    <item
        android:id="@+id/autoDeleteDownload"
        android:menuCategory="container"
        android:title="@string/auto_delete_label"
        android:icon="@drawable/ic_delete_auto"/>
    <item
        android:id="@+id/playback_speed"
        android:menuCategory="container"
        android:title="@string/playback_speed"
        android:icon="@drawable/ic_playback_speed"/>
    <item
        android:id="@+id/edit_tags"
        android:menuCategory="container"
        android:title="@string/edit_tags"
        android:icon="@drawable/ic_tag"/>
    <item
        android:id="@+id/associate_queue"
        android:menuCategory="container"
        android:title="@string/pref_feed_associated_queue"
        android:icon="@drawable/ic_playlist_play"/>
    <item
        android:id="@+id/export_opml"
        android:menuCategory="container"
        android:title="@string/opml_export_label"
        android:icon="@drawable/baseline_import_export_24"/>
</menu>
