<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:custom="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        custom:showAsAction="always"
        android:title="@string/search_label"/>
    <item
        android:id="@+id/subscriptions_filter"
        android:icon="@drawable/ic_filter"
        android:menuCategory="container"
        android:title="@string/filter"
        custom:showAsAction="always"/>
    <item
        android:id="@+id/subscriptions_sort"
        android:title="@string/sort"
        android:icon="@drawable/arrows_sort"
        custom:showAsAction="always" />
    <item
        android:id="@+id/action_statistics"
        android:icon="@drawable/ic_chart_box"
        android:title="@string/statistics_label"
        android:visible="false"
        custom:showAsAction="always" />
    <item
        android:id="@+id/new_synth"
        android:title="@string/new_synth_label"
        custom:showAsAction="never" />
    <item
        android:id="@+id/refresh_item"
        android:title="@string/refresh_label"
        custom:showAsAction="never" />
    <item
        android:id="@+id/toggle_grid_list"
        android:title="@string/toggle_grid_list"
        custom:showAsAction="never" />
</menu>
