<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:custom="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/open_queue"
        android:title="@string/open_queue"
        android:icon="@drawable/playlist_play"
        custom:showAsAction="always"/>

<!--    <item-->
<!--        android:id="@+id/sort_items"-->
<!--        android:icon="@drawable/arrows_sort"-->
<!--        android:title="@string/sort"-->
<!--        custom:showAsAction="always">-->
<!--    </item>-->

<!--    <item-->
<!--        android:id="@+id/filter_items"-->
<!--        android:icon="@drawable/ic_filter"-->
<!--        android:title="@string/filter"-->
<!--        custom:showAsAction="always">-->
<!--    </item>-->

<!--    <item-->
<!--        android:id="@+id/settings"-->
<!--        android:icon="@drawable/ic_settings"-->
<!--        android:title="@string/settings_label"-->
<!--        custom:showAsAction="ifRoom">-->
<!--    </item>-->

    <item
        android:id="@+id/refresh_feed"
        android:menuCategory="container"
        android:title="@string/refresh_label"
        custom:showAsAction="never">
    </item>
    <item
        android:id="@+id/refresh_complete_item"
        android:menuCategory="container"
        android:title="@string/load_complete_feed"
        custom:showAsAction="collapseActionView">
    </item>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        custom:showAsAction="always"
        android:title="@string/search_label"/>

    <item
        android:id="@+id/visit_website_item"
        android:icon="@drawable/ic_web"
        android:menuCategory="container"
        custom:showAsAction="ifRoom|collapseActionView"
        android:title="@string/visit_website_label"
        android:visible="true">
    </item>

    <item
        android:id="@+id/share_feed"
        android:menuCategory="container"
        custom:showAsAction="never"
        android:title="@string/share_label" />

    <item
        android:id="@+id/rename_feed"
        android:menuCategory="container"
        android:title="@string/rename_feed_label"
        custom:showAsAction="never" />

    <item
        android:id="@+id/remove_feed"
        android:icon="@drawable/ic_delete"
        android:menuCategory="container"
        android:title="@string/remove_feed_label"
        android:visible="true"
        custom:showAsAction="collapseActionView">
    </item>

    <item
        android:id="@+id/switch_queue"
        android:title="@string/switch_queue" />

</menu>