<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- the order is opposite of the typical menu:
         catered to FAB speed dial, which somehow shows the item in reverse.
         E.g., item @id/delete_batch is the first in the xml,
         visually it will be shown at the bottom of the list of actions.
      -->
    <item
        android:id="@+id/delete_batch"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_episode_label" />

    <item
        android:id="@+id/download_batch"
        android:icon="@drawable/ic_download"
        android:title="@string/download_label" />

    <item
        android:id="@+id/toggle_played_batch"
        android:icon="@drawable/ic_mark_played"
        android:title="@string/toggle_played_label" />

    <item
        android:id="@+id/remove_from_queue_batch"
        android:icon="@drawable/ic_playlist_remove"
        android:title="@string/remove_from_queue_label" />

    <item
        android:id="@+id/add_to_queue_batch"
        android:icon="@drawable/ic_playlist_play"
        android:title="@string/add_to_queue_label" />

    <item
        android:id="@+id/put_in_queue_batch"
        android:icon="@drawable/ic_playlist_play"
        android:title="@string/put_in_queue_label" />

    <item
        android:id="@+id/toggle_favorite_batch"
        android:icon="@drawable/ic_star"
        android:title="@string/toggle_favorite_label" />

</menu>
