<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:custom="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_label"
        custom:showAsAction="always"/>

    <item
        android:id="@+id/episodes_sort"
        android:icon="@drawable/arrows_sort"
        android:title="@string/sort"
        custom:showAsAction="always" />

    <item
        android:id="@+id/filter_items"
        android:icon="@drawable/ic_filter"
        android:menuCategory="container"
        android:title="@string/filter"
        custom:showAsAction="always"/>

    <item
        android:id="@+id/clear_history_item"
        android:icon="@drawable/ic_delete"
        android:title="@string/clear_history_label"
        custom:showAsAction="never"/>

    <item
        android:id="@+id/reconcile"
        android:title="@string/reconcile_label"
        custom:showAsAction="never" />

    <item
        android:id="@+id/clear_new"
        android:title="@string/clear_new_label"
        custom:showAsAction="never" />

</menu>
