<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:custom="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/text_speech"
        android:icon="@drawable/text_to_speech"
        android:title="@string/TTS_label"
        android:visible="false"
        custom:showAsAction="always">
    </item>

    <item
        android:id="@+id/switchJS"
        android:icon="@drawable/javascript_icon_245402"
        android:title="@string/javasript_label"
        custom:showAsAction="always">
    </item>

    <item
        android:id="@+id/switch_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home_label"
        custom:showAsAction="always">
    </item>

    <item
        android:id="@+id/share_notes"
        android:title="@string/share_notes_label"
        custom:showAsAction="never">
    </item>

</menu>