<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_label"
        custom:showAsAction="always" />

<!--    <item-->
<!--        android:id="@+id/action_download_logs"-->
<!--        android:icon="@drawable/ic_history"-->
<!--        android:title="@string/downloads_log_label"-->
<!--        custom:showAsAction="always" />-->

<!--    <item-->
<!--        android:id="@+id/refresh_item"-->
<!--        android:title="@string/refresh_label"-->
<!--        android:menuCategory="container"-->
<!--        app:showAsAction="never" />-->

    <item
        android:id="@+id/filter_items"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        custom:showAsAction="always"/>

    <item
        android:id="@+id/downloads_sort"
        android:icon="@drawable/arrows_sort"
        android:title="@string/sort"
        custom:showAsAction="always"/>

    <item
        android:id="@+id/switch_queue"
        android:title="@string/switch_queue" />

    <item
        android:id="@+id/reconcile"
        android:title="@string/reconcile_label"
        app:showAsAction="never" />

</menu>
